--- a/src/css/_table.css
+++ b/src/css/_table.css
@@ -4,12 +4,12 @@
   }
 
   thead {
-    @apply hidden lg:table-header-group;
+    @apply table-header-group;
   }
 
   tr {
     @apply max-w-full block relative border-b-4 border-gray-100
-      lg:table-row lg:border-b-0 dark:border-slate-800;
+      table-row border-b-0 dark:border-slate-800;
   }
 
   tr:last-child {
@@ -17,16 +17,16 @@
   }
 
   td:not(:first-child) {
-    @apply lg:border-l lg:border-t-0 lg:border-r-0 lg:border-b-0 lg:border-gray-100 lg:dark:border-slate-700;
+    @apply border-l border-t-0 border-r-0 border-b-0 border-gray-100 dark:border-slate-700;
   }
 
   th {
-    @apply lg:text-left lg:p-3;
+    @apply text-left p-3;
   }
 
   td {
-    @apply flex justify-between text-right py-3 px-4 align-top border-b border-gray-100
-      lg:table-cell lg:text-left lg:p-3 lg:align-middle lg:border-b-0 dark:border-slate-800;
+    @apply justify-between text-right py-3 px-4 align-top border-b border-gray-100
+      sm:table-cell sm:text-left sm:p-3 sm:align-middle border-b-0 dark:border-slate-800;
   }
 
   td:last-child {
@@ -35,15 +35,15 @@
 
   tbody tr,
   tbody tr:nth-child(odd) {
-    @apply lg:hover:bg-gray-100 lg:dark:hover:bg-slate-700/70;
+    @apply hover:bg-gray-100 dark:hover:bg-slate-700/70;
   }
 
   tbody tr:nth-child(odd) {
-    @apply lg:bg-gray-100/50 lg:dark:bg-slate-800/50;
+    @apply bg-gray-100/50 dark:bg-slate-800/50;
   }
 
   td:before {
     content: attr(data-label);
-    @apply font-semibold pr-3 text-left lg:hidden;
+    @apply font-semibold pr-3 text-left hidden;
   }
 }
